vagrant/localstack/install_helm/files/ls-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localstack-external
  namespace: awslocal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localstack.fks.lab
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: awslocal-localstack
                port:
                  number: 8081
